styles.css
body {
    margin: 0;
    background-color: #f0f0f0;
    font-family: Calibri, sans-serif;
    overflow-x: hidden;
    color: #ffffff;
}

.header {
    background-color: #342428;
    color: #f2f2f2;
    padding: 10px;
    text-align: center;
}

h1 {
    color: #ffffff;
    text-align: center;
}

#stretch {
    padding-bottom: 100%;
}

#overflowpass {
    overflow: hidden;
}

.main {
    background: linear-gradient(#95735e40, #00000040), url(./images/background.webp);
    background-size: cover;
    background-repeat: no-repeat;
    background-color: #63686d;
}

.recipes {
    background-color: #00000080;
    border-radius: 4vh;
    width: 300px;
    padding: 1vw;
    margin: auto;
}

ul,
ol {
    padding: 0;
    row-gap: 2vh;
    text-align: center;
    list-style-type: none;
}

a,
.recipe-steps {
    text-decoration: none;
    color: #ffffff;
}

a:hover {
    color: #2ca39c;
}

.footer {
    background-color: #0b1219;
    width: 100%;
    color: #ffffff;
    text-align: center;
    position: fixed;
    bottom: 0;
}

#pie {
    width: 15vw;
    padding-top: 5vw;
    padding-bottom: 5vw;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

#logotype {
    width: 350px;
    padding-top: 5vw;
    padding-bottom: 60%;
    margin: auto;
    display: block;
}

